#2055 Crypsis : The button in index "Approve Posts" is inactive

--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -37,6 +37,7 @@ COM_KUNENA_SEE_MORE="See More..."
 
 COM_KUNENA_FORUM_HEADER="Category Header"
 COM_KUNENA_GEN_GOTOBOTTOM="Go to bottom"
+COM_KUNENA_CATEGORIES_TITLE_APPROVE_POSTS="Approve Posts"
 
 ; JROOT/components/com_kunena/template/crypsis/html/category/list.php
 
