--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
@@ -23,6 +23,8 @@ COM_KUNENA_GEN_ALL_MARKED="All posts have been marked as read"
 COM_KUNENA_GEN_CATEGORY_NAME_UNSUBCRIBED="You have been unsubscribed from the %s category"
 COM_KUNENA_GEN_CATEGORY_SUBCRIBED="You have been subscribed to this category and will get notified by mail about new posts."
 COM_KUNENA_GEN_FORUM_MARKED="All posts in this category have been marked as read"
+COM_KUNENA_CATEGORIES_APPROVE_SUCCESS="There %d topics which approved in categories selected"
+COM_KUNENA_CATEGORIES_NOTHING_TO_APPROVE="No topic need to be approved"
 
 ; JROOT/components/com_kunena/controllers/home.php
 
