--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -681,6 +681,19 @@ COM_KUNENA_A_RECOUNT_USERS_DESC="Update total post count for every user."
 COM_KUNENA_A_RECOUNT_USERTOPICS="Recount Topic Statistics For Users"
 COM_KUNENA_A_RECOUNT_USERTOPICS_DESC="Update user post count for every topic. Fix last posted information."
 
+COM_KUNENA_MODAL_CLOSE="Close"
+COM_KUNENA_AJAXMODAL_START_HEADER="Initializing task, please wait!"
+COM_KUNENA_AJAXMODAL_START_BODY="Connecting..."
+COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_HEADER="Task Ended Prematurely"
+COM_KUNENA_AJAXMODAL_ERROR_RESPONSE_BODY="Please find more details below."
+COM_KUNENA_AJAXMODAL_ERROR_TIMEOUT_HEADER="Server Timeout"
+COM_KUNENA_AJAXMODAL_ERROR_TIMEOUT_BODY="Server was unreachable or action took too long time to perform."
+COM_KUNENA_AJAXMODAL_ERROR_CANCEL_HEADER="Task Cancelled"
+COM_KUNENA_AJAXMODAL_ERROR_ABORT_BODY="Task was aborted."
+COM_KUNENA_AJAXMODAL_ERROR_ABORT_HEADER="Malformed Response"
+COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_HEADER="Unexpected Error"
+COM_KUNENA_AJAXMODAL_ERROR_UNKNOWN_BODY="Maybe you reloaded the page?"
+
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/syncusers.php
 
 COM_KUNENA_SYNC_USERS_ADD="Add user profiles to everyone"
