--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -123,6 +123,7 @@ COM_KUNENA_USRL_POSTS="Posts"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="View Category '%s'"
 COM_KUNENA_YES="Yes"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="The extensions allowed for avatar upload are : %s"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
