#2166 [NFR] Archive category

--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -48,6 +48,9 @@ COM_KUNENA_TABLEHEAD_DESCRIPTION="Description"
 COM_KUNENA_FIELD_INPUT_SEARCH="Search"
 COM_KUNENA_FILTERACTIVE="No items to show."
 COM_KUNENA_TOOLS_LABEL_FORUM_TOOLS="Forum Tools"
+COM_KUNENA_FIELD_LABEL_UNPUBLISHED="Unpublished"
+COM_KUNENA_FIELD_LABEL_PUBLISHED="Published"
+COM_KUNENA_FIELD_LABEL_ARCHIVED="Archived"
 
 ; JROOT/administrator/components/com_kunena/views/attachments/tmpl/default.php
 
