--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -175,6 +175,11 @@ COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET="Are you sure that you want to reset all 
 COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE="Cancel"
 COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE="Confirm"
 
+; JROOT/components/com_kunena/site/template/crypsis/layouts/user/profile/default.php
+
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS="Less"
+COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE="More"
+
 ; Removed strings
 
 COM_KUNENA_GEN_GOTOTOP="Go to top"
