--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.templates.ini
@@ -345,6 +345,7 @@ COM_KUNENA_VPASS="Verify Password:"
 COM_KUNENA_USER_ATTACHMENT_FILE_WEIGHT="KB"
 COM_KUNENA_ATTACHMENT_MANAGER_TOPIC="Topic link"
 COM_KUNENA_MODERATION_CHANGE_TOPIC_ICON="Change topic icon"
+COM_KUNENA_MODERATION_TARGET_TOPIC_ID="Target ID"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
