--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.controllers.ini
@@ -109,6 +109,7 @@ COM_KUNENA_PROFILE_AVATAR_UPLOADED="Avatar uploaded successfully."
 COM_KUNENA_PROFILE_PASSWORD_MISMATCH="Passwords do not match!"
 COM_KUNENA_PROFILE_PASSWORD_NOT_MINIMUM="You must enter a password with at least 5 characters"
 COM_KUNENA_PROFILE_SAVED="Your profile has been saved."
+COM_KUNENA_PROFILE_SAVE_ERROR="Problem detected while saving your profile!"
 COM_KUNENA_USER_ERROR_KARMA="You came to this page in error. Please inform the administrator which link is the cause of the error."
 COM_KUNENA_USER_UNBANNED_DONE="User ban successfully removed."
 COM_KUNENA_USER_UNBLOCKED_DONE="User account successfully enabled."
