--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -189,6 +189,11 @@ COM_KUNENA_ANN_LABEL_PLACEHOLDER_DESCRITPION="Enter the full description of anno
 COM_KUNENA_USER_PROFILE_BUTTON_LABEL_LESS="Less"
 COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE="More"
 
+; new Crypsis
+
+COM_KUNENA_GEN_CATEGORY="Category"
+COM_KUNENA_GEN_AUTHOR="Author"
+
 ; Removed strings
 
 COM_KUNENA_GEN_GOTOTOP="Go to top"
