--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -178,7 +178,7 @@ COM_KUNENA_TOPIC_MODAL_DESC_VOTE_RESET="Are you sure that you want to reset all 
 COM_KUNENA_TOPIC_MODAL_LABEL_CLOSE_RESETVOTE="Cancel"
 COM_KUNENA_TOPIC_MODAL_LABEL_CONFIRM_RESETVOTE="Confirm"
 
-; JROOT/components/com_kunena/site/template/crypsis/layouts/announcement/edit/defualt.php
+; JROOT/components/com_kunena/site/template/crypsis/layouts/announcement/edit/default.php
 
 COM_KUNENA_ANN_LABEL_PLACEHOLDER_TITLE="Enter the title of announcement"
 COM_KUNENA_ANN_LABEL_PLACEHOLDER_SDESCRIPTION="Enter the short description of announcement"
@@ -193,6 +193,9 @@ COM_KUNENA_USER_PROFILE_BUTTON_LABEL_MORE="More"
 
 COM_KUNENA_GEN_CATEGORY="Category"
 COM_KUNENA_GEN_AUTHOR="Author"
+COM_KUNENA_EDITOR_EMOTICONS_LABEL="Emoticons"
+COM_KUNENA_POLL_WARNING_LABEL="Warning!"
+COM_KUNENA_TOPICLIST_AUTHOR_LABEL="Author"
 
 ; Removed strings
 
