Use more generic languages strings for alert boxes to be re-used easily

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -230,3 +230,8 @@ COM_KUNENA_SEARCH_SORTBY_VIEWS="Number of views"
 COM_KUNENA_TOGGLER_COLLAPSE="Collapse"
 COM_KUNENA_TOGGLER_EXPAND="Expand"
 COM_KUNENA_USRL_SEARCH="Find user"
+
+COM_KUNENA_ALERT_WARNING_X="Warning: %s"
+COM_KUNENA_ALERT_ERROR_X="Error: %s"
+COM_KUNENA_ALERT_SUCCESS_X="Success: %s"
+COM_KUNENA_ALERT_INFO_X="Info: %s"
