Regression after merge, missing part to list smileys list above textarea

--- a/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
+++ b/components/com_kunena/site/template/crypsis/language/en-GB/en-GB.kunena_tmpl_crypsis.ini
@@ -196,6 +196,8 @@ COM_KUNENA_GEN_AUTHOR="Author"
 COM_KUNENA_EDITOR_EMOTICONS_LABEL="Emoticons"
 COM_KUNENA_POLL_WARNING_LABEL="Warning!"
 COM_KUNENA_TOPICLIST_AUTHOR_LABEL="Author"
+COM_KUNENA_EDITOR_SMILIES="Smilies"
+COM_KUNENA_EDITOR_HELPLINE_SMILIES="Select a smiley in the list below or use emojis in the textarea"
 
 ; Removed strings
 
