Thank you is rendered like link and not like button

--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -167,6 +167,8 @@ COM_KUNENA_BUTTON_MESSAGE_REPORT="Report This"
 COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG="Report this message to moderators."
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU="Thank You"
 COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG="I want to thank you for this message."
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU="Unthank You"
+COM_KUNENA_BUTTON_MESSAGE_UNTHANKYOU_LONG="I want to unthank you for this message."
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE="Restore"
 COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG="Restore this message."
 COM_KUNENA_BUTTON_SECTION_MARKREAD="Mark All Categories Read"
