--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -73,6 +73,7 @@ COM_KUNENA_C_USER="User Manager"
 
 ; JROOT/administrator/components/com_kunena/views/categories/
 COM_KUNENA_NEW_CATEGORY="New Category"
+COM_KUNENA_FIELD_LABEL_TRASHED="Trashed"
 
 ; JROOT/administrator/components/com_kunena/views/categories/tmpl/edit.php
 
