--- a/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/en-GB/en-GB.com_kunena.views.ini
@@ -405,7 +405,7 @@ COM_KUNENA_COM_A_WAY_COUNT_USERS_USERLIST="User Count Contains"
 COM_KUNENA_COM_A_WAY_COUNT_USERS_USERLIST_DESC="How to count total users in your site: All Users, All Real Users (logged in after registration), Only Active Users (not banned)"
 COM_KUNENA_DEBUG_MODE="Enable Debug Mode"
 COM_KUNENA_DEBUG_MODE_DESC="Set <em>Yes</em> to enable debug mode."
-COM_KUNENA_LISTCAT_SHOW_MODERATORS="Show Moderators in Category Index"
+COM_KUNENA_LISTCAT_SHOW_MODERATORS="Show Moderators on Index page"
 COM_KUNENA_LISTCAT_SHOW_MODERATORS_DESC="Set <em>Yes</em> if you want to show moderators in the category listing. <em>No</em> will allow you to have tighter layout."
 COM_KUNENA_MAILFULL="Include Post Contents"
 COM_KUNENA_MAILFULL_DESC="Set to <em>Yes</em> if you want subscription notification to contain the whole message."
