--- a/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
+++ b/components/com_kunena/site/language/en-GB/en-GB.com_kunena.ini
@@ -235,3 +235,5 @@ COM_KUNENA_ALERT_WARNING_X="Warning: %s"
 COM_KUNENA_ALERT_ERROR_X="Error: %s"
 COM_KUNENA_ALERT_SUCCESS_X="Success: %s"
 COM_KUNENA_ALERT_INFO_X="Info: %s"
+
+COM_KUNENA_TEASER_TEXT="Please login to view the answers"
